--- a/client/main.html
+++ b/client/main.html
@@ -1,25 +1,11 @@
-<head>
-  <title>react-twitter</title>
-</head>
-
-<body>
-  <h1>Welcome to Meteor!</h1>
-
-  {{> hello}}
-  {{> info}}
-</body>
-
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
-
-<template name="info">
-  <h2>Learn Meteor!</h2>
-  <ul>
-    <li><a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com" target="_blank">Follow the Guide</a></li>
-    <li><a href="https://docs.meteor.com" target="_blank">Read the Docs</a></li>
-    <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
-  </ul>
-</template>
+  <head>
+    <title>Customize.It - Phone Search</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Build your own fun, cute and awesome design for your phone cases. #Customize.It">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/style.css" rel="stylesheet">
+  </head>
+  <body>
+     <script src="https://use.fontawesome.com/294d881c7b.js"></script> 
+    <div id="render-target" class="target"></div>
+  </body>
